--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             <div class="container">
                 <h2>About Me</h2>
                 <div class="about-content">
-                    <img src="images/profile.jpg" alt="Professional photo of Angela Minardi" class="profile-img"
-                        loading="lazy" data-aos="zoom-in">
+                    <img src="images/profile.jpg" alt="Professional photo of Angela Minardi" class="profile-img" loading="lazy">
                     <div class="about-text">
                         <p>
                             I'm Angela Minardi, a dedicated computer scientist with a strong background in networking,
@@ -223,17 +222,14 @@
                 <h2>Testimonials</h2>
                 <div class="testimonials-content">
                     <div class="testimonial-item" data-aos="fade-up">
-                        <p>"Angela is a highly skilled computer scientist with a keen eye for detail. Her work on the 5G simulation project was exceptional."</p>
+                        <p>"Angela is a highly skilled computer scientist with a keen eye for detail."</p>
                         <h4>- John Doe, CEO of TechCorp</h4>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-                        <p>"Her blockchain implementation project demonstrated a deep understanding of distributed systems and cryptography."</p>
+                        <p>"Her work on blockchain implementation was exceptional and insightful."</p>
                         <h4>- Jane Smith, Lead Developer at InnovateX</h4>
                     </div>
-                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-                        <p>"Angela's AI-powered chatbot is both intelligent and user-friendly. It's a testament to her expertise in machine learning and NLP."</p>
-                        <h4>- Mike Johnson, Product Manager at AI Solutions</h4>
-                    </div>
+                    <!-- Add more testimonials as needed -->
                 </div>
             </div>
         </section>
@@ -244,23 +240,12 @@
                 <h2>Blog</h2>
                 <div class="blog-content">
                     <article class="blog-post" data-aos="fade-up">
-                        <img src="images/blog1.jpg" alt="Understanding 5G Networks" loading="lazy">
+                        <img src="images/blog1.jpg" alt="Blog Post Image" loading="lazy">
                         <h3><a href="blog/post1.html">Understanding 5G Networks</a></h3>
                         <p>A comprehensive guide to the architecture and benefits of 5G wireless networks.</p>
                         <a href="blog/post1.html" class="btn">Read More</a>
                     </article>
-                    <article class="blog-post" data-aos="fade-up" data-aos-delay="200">
-                        <img src="images/blog2.jpg" alt="Blockchain Fundamentals" loading="lazy">
-                        <h3><a href="blog/post2.html">Blockchain Fundamentals</a></h3>
-                        <p>Exploring the core principles that make blockchain technology secure and decentralized.</p>
-                        <a href="blog/post2.html" class="btn">Read More</a>
-                    </article>
-                    <article class="blog-post" data-aos="fade-up" data-aos-delay="400">
-                        <img src="images/blog3.jpg" alt="Building an AI Chatbot" loading="lazy">
-                        <h3><a href="blog/post3.html">Building an AI Chatbot</a></h3>
-                        <p>A step-by-step tutorial on creating an AI-powered chatbot using Python and TensorFlow.</p>
-                        <a href="blog/post3.html" class="btn">Read More</a>
-                    </article>
+                    <!-- Add more blog posts as needed -->
                 </div>
             </div>
         </section>
@@ -287,8 +272,8 @@
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
-                    <!-- Optional: Contact Form -->
-                    <form action="https://formspree.io/f/yourformid" method="POST" data-aos="fade-up">
+                    <!-- Contact Form -->
+                    <form action="https://formspree.io/f/yourformid" method="POST">
                         <input type="text" name="name" placeholder="Your Name" required>
                         <input type="email" name="_replyto" placeholder="Your Email" required>
                         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -317,13 +302,18 @@
             </div>
         </footer>
 
-        <!-- JavaScript -->
-        <!-- AOS JS for Scroll Animations -->
+        <!-- JavaScript Libraries -->
+        <!-- AOS JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" defer></script>
         <!-- Prism.js JS for Syntax Highlighting -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js" defer></script>
-        <!-- Main JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-cpp.min.js" defer></script>
+        <!-- Chart.js Library -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+        <!-- D3.js Library -->
+        <script src="https://d3js.org/d3.v7.min.js" defer></script>
+        <!-- JavaScript -->
         <script src="js/script.js" defer></script>
     </body>
 
